fixed logging of services